--- a/recipes/cookie.html
+++ b/recipes/cookie.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>COOKIE</h1>
-    <img src="cookie.png" alt="COOKIE">
+    <img src="image/cookie.png" alt="COOKIE">
     <h2>Description</h2>
     <p>Who doesn't like a chocolate striped cookie? These copycat fudge stripe cookies taste just like your childhood Keebler favorites - but improved with real chocolate and an all-butter cookie. <br>
     They're made with a simple sugar cookie dough that is very easy to work with and roll out. I used semisweet chocolate to echo the sweeter taste of the Keebler originals, but you can of course use any chocolate you like.</p>
