--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>LASAGNA</h1>
-    <img src="lasagna.png" alt="LASAGNA">
+    <img src="image/lasagna.png" alt="LASAGNA">
     <h2>Description</h2>
     <p></p>
     <h2>Ingredients</h2>
