--- a/recipes/sprout.html
+++ b/recipes/sprout.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>SPROUT</h1>
-    <img src="sprout.png" alt="SPROUT">
+    <img src="image/sprout.png" alt="SPROUT">
     <h2>Description</h2>
     <p></p>
     <h2>Ingredients</h2>
